//
// Protocol buffers definition for auth service
//
syntax = "proto3";
package com.r3ds;

message Credentials {
	string username = 1;
	string password = 2;
}

message SignupResponse {
}

message LoginResponse {
}

service AuthService {
	rpc signup(Credentials) returns (SignupResponse);
	rpc login(Credentials) returns (LoginResponse);
}